Fixed missing lang, Removed scrollbar

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -37,13 +37,15 @@ $note-size: 225px;
 html,
 body {
   max-width: 100%;
+  height: 100vh;
   max-height: 100%;
 }
 
 body {
-  height: 100vh;
   margin: 0;
   padding: 0;
+  top: 0;
+  position: absolute;
   background-color: #202038;
   background-size: cover;
   background-repeat: no-repeat;
